--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
     <h2>Live Portfolio Website</h2>
     <div class="live-demo">
-      <p>You can view my live portfolio website here: <a href="https://prabhbhullar97.github.io/" target="_blank">Click Here</a></p>
+      <p><a href="https://prabhbhullar97.github.io"/>You can view my live portfolio website here:</a>Click Here</a></p>
     </div>
 
     <h2>Technologies Used</h2>
