--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
     <h2>Live Portfolio Website</h2>
     <div class="live-demo">
-      <p><a href="index.html"/>You can view my live portfolio website here:</a>Click Here</a></p>
+      <p><a href="index.html">You can view my live portfolio website here:</a>Click Here</a></p>
     </div>
 
     <h2>Technologies Used</h2>
